# ende

./: Cargo.toml  Justfile  Makefile  README.md  RESOURCES.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  rust.yml
src/: lib.rs  ucs2.rs  unicode.rs  utf16.rs  utf8.rs
src/ucs2/: mod.rs  ucs2.rs
src/unicode/: mod.rs  unicode.rs
src/utf16/: mod.rs  utf16.rs
src/utf8/: mod.rs  ucs2.rs  utf8.rs
tests/: test_ucs2.rs  test_utf16.rs  test_utf8.rs
