[package]
name = "ende"
version = "0.1.0"
edition = "2021"
description = "A library for encoding/decoding unicode/utf-8/utf-16(ucs-2) code points."
repository = "https://github.com/FedericoBruzzone/ende"
homepage = "https://github.com/FedericoBruzzone/ende"
license = "GPL-3.0"
readme = "README.md"
keywords = ["encode", "decode", "utf8", "utf16", "unicode"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
